--- a/GMI-spring/src/main/resources/application.properties
+++ b/GMI-spring/src/main/resources/application.properties
@@ -9,13 +9,15 @@ spring.datasource.url=jdbc:mysql://localhost:3306/projetpfe?useUnicode=true&useJ
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 jwt.secret=secret
 jwt.jwtExpirationMs=86400000
 max=file and request size
 spring.servlet.multipart.max-file-size=500MB
 spring.servlet.multipart.max-request-size=500MB
+
+
 
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
