--- a/GMI-angular/angular.json
+++ b/GMI-angular/angular.json
@@ -36,10 +36,14 @@
                             "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css",
                             "node_modules/remixicon/fonts/remixicon.css",
                             "node_modules/ngx-lightbox/lightbox.css",
+                                          "node_modules/bootstrap/dist/css/bootstrap.min.css",
+
                             "src/styles.scss"
                         ],
                         "scripts": [
-                            "node_modules/apexcharts/dist/apexcharts.min.js"
+                            "node_modules/apexcharts/dist/apexcharts.min.js",
+                                          "node_modules/bootstrap/dist/js/bootstrap.min.js"
+
                         ],
                         "server": "src/main.server.ts",
                         "prerender": true,
