--- a/GMI-angular/package.json
+++ b/GMI-angular/package.json
@@ -27,6 +27,7 @@
     "@fullcalendar/core": "^6.1.15",
     "@fullcalendar/daygrid": "^6.1.17",
     "@iplab/ngx-file-upload": "^18.0.0",
+    "@tailwindcss/postcss": "^4.1.8",
     "apexcharts": "^3.54.1",
     "bootstrap": "^5.3.6",
     "express": "^4.18.2",
@@ -58,8 +59,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14",
+    "postcss": "^8.5.4",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.5.2"
   }
 }
