--- a/GMI-angular/package.json
+++ b/GMI-angular/package.json
@@ -39,6 +39,7 @@
     "ngx-scrollbar": "^16.0.0",
     "remixicon": "^4.5.0",
     "rxjs": "~7.8.0",
+    "trezo": "file:",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
     "zone.js": "~0.14.10"
